welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: ';' expected but 'for' found.
	} for (compteur <- 1 to nbPas) {
          ^