welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) {
	if (versLAvant == true) {
		for (compteur <- 1 to nbPas) {
		avance()
		}
	} for (compteur <- 1 to nbPas) {
		recule()
	}
		
}
